<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">海外自动化测试工具V1.4</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="label_contacts">联系人容量设置</string>
    <string name="label_sms">短信容量设置</string>
    <string name="label_calllog">通话记录容量设置</string>
    <string name="label_filemanager">文件管理器容量设置</string>
    <string name="label_reboot">自动重启</string>
    <string name="label_testreport">生成自动化测试报告</string>

    <!-- FTP  黄圣权 -->
    <string name="name_app">FTP速度测试</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_exit">退出</string>
    <string name="tip_choose_testType">选择测试类型</string>
    <string name="testType_download">FTP下载速度测试</string>
    <string name="testType_upload">FTP上传速度测试</string>
    <string name="tip_settings">设置测试参数</string>
    <string name="tip_size_download">下载文件大小：</string>
    <string name="tip_size_upload">上传文件大小：</string>
    <string name="tip_size_default">(未选择文件)</string>
    <string name="tip_choose_download">选择下载文件：</string>
    <string name="tip_choose_upload">选择上传文件：</string>
    <string name="btn_choose_upload">浏览 </string>
    <string name="btn_reChoose">重选类型</string>
    <string name="btn_finishChoose">完成设置 </string>
    <string name="tip_test">执行测试</string>
    <string name="button_start">启动测试</string>
    <string name="button_stop">终止测试</string>
    <string name="button_end">退出程序</string>
    <string name="name_chooseDownload">选择下载文件</string>
    <string name="name_chooseUpload">选择上传文件</string>
    <string name="tip_back">＜后退</string>
    <string name="tip_forward">＞前进</string>
    <string name="tip_close">╳退出</string>
    <string name="space">----</string>
    <string name="update">版本更新</string>
     <!-- Emmagee  黄圣权 -->
    <string name="hello">Hello World, RunningTaskActivity!</string>
    <string name="emmagee_name">状态监测</string>
    <string name="app_name1">Main</string>
    <string name="emmagee_systemInfo">系统信息</string>
    <string name="app_name3">测试</string>
    <string name="emmagee_settins">状态监测设置</string>
    <string name="system">检测系统信息</string>
    <string name="start">启动程序</string>
    <string name="cpu">开始测试</string>
    <string name="bg">开始测试</string>
    <string name="testmemory">测试内存</string>
    <string name="memoryinfo">memoryInfo</string>
    <string name="collect">采集频率：</string>
    <string name="receiver">收件人(多人以空格分割):</string>
    <string name="sender">发件人:</string>
    <string name="password">密码:</string>
    <string name="smtp">smtp服务器:</string>
    <string name="seconds"> 秒</string>
    <string name="window"> 是否显示浮窗</string>
    <string name="ok">保存</string>
    <string name="openwifi">开启wifi</string>
    <string name="closewifi">关闭wifi</string>

</resources>
